--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "styled-components": "^5.3.5",
     "typescript": "^4.7.3",
     "web-vitals": "^2.1.4"
   },
@@ -38,6 +39,9 @@
     ]
   },
   "devDependencies": {
-    "react-router": "^6.3.0"
+    "@types/jest": "^28.1.1",
+    "@types/styled-components": "^5.1.25",
+    "react-router": "^6.3.0",
+    "ts-jest": "^28.0.5"
   }
 }
